--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ test {
 
 sonarqube {
     properties {
-        property 'sonar.host.url', 'http://34.125.224.153:9000'
-        property 'sonar.login', '******'
+        property 'sonar.host.url', 'http://34.125.224.153:9000/'
+        property 'sonar.login', '35a2d2ee3f080fd916158033dbaee4155cf90afb'
     }
 }
