--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ test {
 sonarqube {
     properties {
         property 'sonar.host.url', 'http://34.125.102.245:9000'
-        property 'sonar.login', '****'
+        property 'sonar.login', 'admin'
+	property 'sonar.password', 'sonar'
     }
 }
