--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
 	id 'war'
-	id 'org.sonarqube' version '3.3'
+	id 'org.sonarqube' version '8.9.7'  //version updated by me
 }
 
 group = 'com.example'
@@ -28,8 +28,8 @@ test {
 
 sonarqube {
     properties {
-        property 'sonar.host.url', 'http://34.125.198.194:9000' 
-        property 'sonar.login', 'admin'
+        property 'sonar.host.url', 'http://34.125.198.194:9000'   
+        property 'sonar.login', 'admin' 
 	    property 'sonar.password', 'sonar'
     }
 }
