--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
 	id 'war'
-	id 'org.sonarqube' version '8.9.7'  //version updated by me
+	id 'org.sonarqube' version '3.3'
 }
 
 group = 'com.example'
