--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ test {
 sonarqube {
     properties {
         property 'sonar.host.url', 'http://34.125.198.194:9000'   
-        property 'sonar.login', 'admin' 
-	    property 'sonar.password', 'sonar'
+        property 'sonar.login', '****' 
+	property 'sonar.password', '*****'
     }
 }
